--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-  <H2 class="text-3xl ">Assignment-2</H2>
+  <header>
+    <div class="nav-bar flex items-center justify-between">
+      <div class="nav-title">
+        <h3 class="text-3xl font-bold">Tech<span class="Wave">Wave</span></h3>
+      </div>
+      <div class="nav-list">
+        <ul class="flex gap-4">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Episodes</a></li>
+          <li><a href="#">Host</a></li>
+        </ul>
+      </div>
+      <div class="nav-btn">
+        <button class="flex items-center gap-2 font-sm">Subscribe <img src="assets/ArrowRight.png" alt=""></button>
+      </div>
+    </div>
+
+    
+  </header>
   
 </body>
 </html>
