Properly design banner section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
       </div>
     </div>
 
-    
+    <section>
+      <div class="banner-container flex items-center  justify-center flex-col gap-14">
+        <div class="flex items-center">
+          <img src="assets/circle.png" alt="">
+      </div>
+      <div class="banner-title">
+        <h1 class="text-5xl font-bold flex justify-center items-center">TechWave</h1>
+        <div class="flex justify-center items-center mt-4">
+          <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+        </div>
+          <div class="banner-btn flex justify-center items-center gap-6 mt-6">
+          <button class="nav-btn flex gap-1"><img src="assets/spotify.png" alt="">Listen on Spotify</button>
+          <button class=" message flex items-center gap-1"><img src="assets/message.png" alt="">Subscribe</button>
+          </div>
+      </div>
+    </section>
   </header>
   
 </body>
