--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
       </div>
     </section>
   </header>
+
+  <section>
+    <div class="podcast-container">
+      <div class="podcast-title">
+        <h3 class="text-3xl font-bold flex justify-center items-center">About The Podcast</h3>
+      </div>
+      <p class="mt-6 flex justify-center items-center">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+      We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>
+      and share stories of personal growth from industry leaders.</p>
+      <p class="mt-6 flex justify-center items-center">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+    </div>
+    <div class="podcast-detail flex justify-center items-center gap-20 mt-10 mb-5">
+      <div class="detail-title">
+        <h3 class="text-3xl font-bold flex justify-center items-center">150K+</h3>
+        <p class="flex justify-center items-center">Monthly Listeners</p>
+      </div>
+      <div class="detail-title">
+        <h3 class="text-3xl font-bold flex justify-center items-center">200+</h3>
+        <p class="flex justify-center items-center">Episodes Published</p>
+      </div>
+      <div class="detail-title">
+        <h3 class="text-3xl font-bold flex justify-center items-center">14.9★</h3>
+        <p class="flex justify-center items-center">Average Rating</p>
+      </div>
+      <div class="detail-title">
+        <h3 class="text-3xl font-bold flex justify-center items-center">50+</h3>
+        <p class="flex justify-center items-center">Industry Experts</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    
+  </section>
   
 </body>
 </html>
