design About techwave section done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,38 @@
   </section>
 
   <section>
-    
+    <div class="tech-container">
+      <h3 class="text-3xl font-bold flex justify-center items-center mt-10">Why Choose TechWave</h3>
+    </div>
+    <div class="tech-cards mt-20">
+      <div class="card first">
+        <img src="assets/headphone.png" alt=" headphone logo">
+        <h4 class="text-xl font-bold mt-4">Premium Audio Quality</h4>
+        <p class="mt-2">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode
+        is mastered for optimal listening across all devices and platforms.</p>
+      </div>
+      <div class="card second">
+        <img src="assets/device.png" alt=" device logo">
+        <h4 class="text-xl font-bold mt-4">Mobile Friendly</h4>
+        <p class="mt-2">Listen on the go with seamless mobile experience and offline downloads.</p>
+      </div>
+      <div class="card third">
+        <img src="assets/location.png" alt=" icon logo">
+        <h4 class="text-xl font-bold mt-4">Global Community</h4>
+        <p class="mt-2">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+      </div>
+      <div class="card fourth">
+        <img src="assets/icon.png" alt=" resource logo">
+        <h4 class="text-xl font-bold mt-4">Exclusive Interviews</h4>
+        <p class="mt-2">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive
+        conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+      </div>
+      <div class="card fifth">
+        <img src="assets/resource.png" alt="">
+        <h4 class="text-xl font-bold mt-4">Rich Resources</h4>
+        <p class="mt-2">Access show notes, transcripts, and additional learning materials for every episode.</p>
+      </div>
+    </div>
   </section>
   
 </body>
