--- a/index.html
+++ b/index.html
@@ -107,6 +107,77 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <div class="episode-container">
+      <h3 class="text-5xl font-bold flex justify-center items-center mt-20">Featured Episodes</h3>
+      <div class="episodes flex justify-center items-center">
+        <div class="epi-card">
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/L3N3wiKpVVk?si=8aeSwMVZSZxQzYyA"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h4 class="text-xl font-bold pl-2">The Future of AI in Everyday Life</h4>
+          <p class="pl-2">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+          <div class="time flex pl-2">
+            <img src="assets/clock.png" alt="">
+             <p class="font-sm"> 42 min</p>
+          </div>
+        </div>
+
+
+        <div class="epi-card">
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/oX7OduG1YmI?si=k4-75mwd3WuC1Xsi"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h4 class="text-xl font-bold pl-2">Building Better Habits for Remote Work</h4>
+          <p class="pl-2">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+          <div class="time flex pl-2">
+            <img src="assets/clock.png" alt="">
+            <p class="font-sm"> 35 min</p>
+          </div>
+        </div>
+
+
+        <div class="epi-card">
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/4Q9ymisvCmA?si=_xEtH_2Shv8QhdEY"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <h4 class="text-xl font-bold pl-2">Career Growth in Tech: A Roadmap</h4>
+          <p class="pl-2">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+          <div class="time flex pl-2">
+            <img src="assets/clock.png" alt="">
+            <p class="font-sm"> 51 min</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+      <h3 class="text-3xl font-bold flex justify-center items-center mt-20">Meet the Host</h3>
+
+      <div class="host-container flex">
+        <div class="host-image">
+          <img class="flex justify-center items-center mt-8" src="assets/host.png" alt="">
+        </div>
+        <div class="host-text p-3">
+          <h4 class="text-2xl font-bold">Alex Kumar</h4>
+          <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,
+          working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and
+          practical advice for anyone looking to grow in tech.</p>
+
+          <div class="text-icon flex gap-4 mt-4">
+            <img src="assets/linkedin.png" alt="">
+            <img src="assets/x.png" alt="">
+            <img src="assets/instagram.png" alt="">
+            <img src="assets/youtube.png" alt="">
+          </div>
+        </div>
+      </div>
+  </section>
   
 </body>
 </html>
