--- a/index.html
+++ b/index.html
@@ -178,6 +178,33 @@
         </div>
       </div>
   </section>
+
+  <footer>
+    <div class="foot-container">
+      <h1 class="text-5xl font-bold flex justify-center items-center mt-10">Tech <span class="Wave">Wave</span></h1>
+
+      <div class="foot-icon flex justify-center items-center gap-7 mt-12">
+        <div class="icon flex gap-2">
+          <img src="assets/spotify.png" alt="">
+          <p>Spotify</p>
+        </div>
+        <div class="icon flex gap-2">
+          <img src="assets/apple-podcast.png" alt="">
+          <p>Apple Podcasts</p>
+        </div>
+        <div class="icon flex gap-2">
+          <img src="assets/youtube-podcast.png" alt="">
+          <p>YouTube</p> 
+        </div>
+        <div class="icon flex gap-2">
+          <img src="assets/twitter.png" alt="">
+          <p>Twitter</p>
+        </div>
+
+      </div>
+      <p class="flex justify-center items-center mt-8">© 2026 TechWave Podcast. All rights reserved.</p>
+    </div>
+  </footer>
   
 </body>
 </html>
